fixes #24 change dark mode, background color

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -85,7 +85,6 @@
   }
 
   .sidebar {
-    background-color: $gray-900 !important;
     padding-left: 0.5rem !important;
     padding-right: 0.5rem !important;
   }
