--- a/src/scss/utils/variables.scss
+++ b/src/scss/utils/variables.scss
@@ -32,7 +32,7 @@ $grays: (
 ) !default;
 // fusv-enable
 
-$blue: #005f89 !default;
+$blue: #3b7ab5 !default;
 $dark-blue: #3e545e !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
@@ -47,7 +47,7 @@ $cyan: #1a73e8 !default;
 
 //MAIN COLOR BLUE
 $color-blue: #0a083b;
-$color-blue-1: #3b5998;
+$color-blue-1: #3b7ab5;
 $color-blue-2: #00acee;
 $color-blue-3: #005f89;
 $color-blue-4: #f5f8fa;
@@ -84,7 +84,7 @@ $info: $white !default;
 $warning: $yellow !default;
 $danger: $red !default;
 $light: $gray-100 !default;
-$dark: $gray-900 !default;
+$dark: #1a2226 !default;
 
 // scss-docs-start theme-colors-map
 $theme-colors: (
@@ -115,7 +115,7 @@ $theme-colors: (
 //
 // Settings for the `<body>` element.
 
-$body-bg: $white !default;
+$body-bg: $color-blue-4 !default;
 $body-color: #0a083b !default;
 $body-text-align: null !default;
 
@@ -248,3 +248,16 @@ $accordion-button-focus-box-shadow: $color-blue-6;
 $nav-tabs-link-active-color: #fff;
 $nav-tabs-link-active-bg: $color-blue-3;
 $grid-gutter-width: 1.25rem;
+
+// for react-select
+:root {
+  --sidebar-submenu-bg: #0c1215;
+  --dropdown-item-hover-color: #1ab394;
+  --dropdown-item-hover-bg: #e8e9ec;
+  --view-active-bg: #e8e9ec;
+  --text-title-color: #081240;
+  --dropdown-bg: #fff;
+  --dropdown-item-color: #081240;
+  --input-border-color: #e3e3e3;
+  --input-placeholder-color: #c0c0c0;
+}
